--- a/client/geoLoc.css
+++ b/client/geoLoc.css
@@ -6,30 +6,12 @@
 }*/
 
 #map {
-  height: 100%; 
+  height: 80%;
   }
 
-
-div.venu {
-  border:1px solid black;
-  	width:300px;
-  	height:68px;
-  	padding:10px;
-    float:both;
-    }
-
-    div.venu:hover{
-      background-color:black;
-      color:white;
-    }
-
-div.venu img{
-  margin-left:5px;
-float:left;
-height:64px;
-width:64px;
+.padContainer{
+  padding:20px;
 }
-
-div.venu p {
-    margin-left: 90px;
+.camera-popup .photo-preview{
+  width:280px;
 }
